# confairsation

./: README.md  docker-compose.yml  env.sample
backend/: .gitignore  Dockerfile  pyproject.toml
backend/confairsation/: main.py
backend/confairsation/routers/: accounts.py
backend/confairsation/utilities/: couch.py  token.py
backend/confairsation/utilities/couch_templates/: validation.js
frontend/: Dockerfile  eslint.config.js  index.html  nginx.default.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.mts
frontend/src/: App.vue  avatar.ts  components.d.ts  typed-router.d.ts
frontend/src/components/: Avatar.vue  Event.vue  MiniColorPicker.vue  Participant.vue  Plot.vue
frontend/src/components/app/: AppFooter.vue  AppHeader.vue
frontend/src/layouts/: default.vue
frontend/src/pages/: index.vue  login.vue
frontend/src/pages/conversation/: [id].vue  [id]@toolbar.vue
frontend/src/pages/people/: [id].vue
frontend/src/stores/: app.ts  conversations.ts  db.ts  identity.ts  persons.ts
