[tool.poetry]
name = "confairsation"
version = "0.1.0"
description = ""
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
requests = "^2.32.3"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
